// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar renders "Not logged in" correctly 1`] = `
"<Fragment>
  <Blueprint3.Navbar className=\\"NavigationBar primary-navbar bp3-dark\\">
    <Blueprint3.NavbarGroup align=\\"left\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/academy\\">
        <Blueprint3.Icon icon=\\"symbol-diamond\\" />
        <Blueprint3.NavbarHeading style={{...}}>
          Source Academy @ NUS
        </Blueprint3.NavbarHeading>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/githubassessments\\">
        <Blueprint3.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
    </Blueprint3.NavbarGroup>
    <Blueprint3.NavbarGroup align=\\"right\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/contributors\\">
        <Blueprint3.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint3.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint3.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown handleLogOut={[Function: handleLogOut]} updateLatestViewedCourse={[Function: updateLatestViewedCourse]} handleCreateCourse={[Function: handleCreateCourse]} courses={{...}} courseId={[undefined]} name={[undefined]} />
    </Blueprint3.NavbarGroup>
  </Blueprint3.Navbar>
  <Switch>
    <Route path=\\"/playground\\" />
    <Route path=\\"/sourcecast\\" />
    <Route path=\\"/githubassessments\\" />
    <Route path=\\"/sicpjs/:section?\\">
      <SicpNavigationBar />
    </Route>
    <Route />
  </Switch>
</Fragment>"
`;

exports[`NavigationBar renders correctly for student with course 1`] = `
"<Fragment>
  <Blueprint3.Navbar className=\\"NavigationBar primary-navbar bp3-dark\\">
    <Blueprint3.NavbarGroup align=\\"left\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/academy\\">
        <Blueprint3.Icon icon=\\"symbol-diamond\\" />
        <Blueprint3.NavbarHeading style={{...}}>
          CS1101S
        </Blueprint3.NavbarHeading>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/sourcecast\\">
        <Blueprint3.Icon icon=\\"music\\" />
        <div className=\\"navbar-button-text\\">
          Sourcecast
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/playground\\">
        <Blueprint3.Icon icon=\\"code\\" />
        <div className=\\"navbar-button-text\\">
          Playground
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/githubassessments\\">
        <Blueprint3.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/sicpjs/index\\">
        <Blueprint3.Icon icon=\\"book\\" />
        <div className=\\"navbar-button-text\\">
          SICP JS
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/achievements\\">
        <Blueprint3.Icon icon=\\"mountain\\" />
        <div className=\\"navbar-button-text\\">
          Achievements
        </div>
      </NavLink>
    </Blueprint3.NavbarGroup>
    <Blueprint3.NavbarGroup align=\\"right\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/contributors\\">
        <Blueprint3.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint3.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint3.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown handleLogOut={[Function: handleLogOut]} updateLatestViewedCourse={[Function: updateLatestViewedCourse]} handleCreateCourse={[Function: handleCreateCourse]} courses={{...}} courseId={1} name=\\"Bob\\" />
    </Blueprint3.NavbarGroup>
  </Blueprint3.Navbar>
  <Switch>
    <Route path=\\"/playground\\" />
    <Route path=\\"/sourcecast\\" />
    <Route path=\\"/githubassessments\\" />
    <Route path=\\"/sicpjs/:section?\\">
      <SicpNavigationBar />
    </Route>
    <Route>
      <AcademyNavigationBar role=\\"student\\" assessmentTypes={{...}} />
    </Route>
  </Switch>
</Fragment>"
`;

exports[`NavigationBar renders correctly for student without course 1`] = `
"<Fragment>
  <Blueprint3.Navbar className=\\"NavigationBar primary-navbar bp3-dark\\">
    <Blueprint3.NavbarGroup align=\\"left\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/academy\\">
        <Blueprint3.Icon icon=\\"symbol-diamond\\" />
        <Blueprint3.NavbarHeading style={{...}}>
          Source Academy @ NUS
        </Blueprint3.NavbarHeading>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/githubassessments\\">
        <Blueprint3.Icon icon=\\"briefcase\\" />
        <div className=\\"navbar-button-text\\">
          Classroom
        </div>
      </NavLink>
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/sicpjs/index\\">
        <Blueprint3.Icon icon=\\"book\\" />
        <div className=\\"navbar-button-text\\">
          SICP JS
        </div>
      </NavLink>
    </Blueprint3.NavbarGroup>
    <Blueprint3.NavbarGroup align=\\"right\\">
      <NavLink activeClassName=\\"bp3-active\\" className=\\"NavigationBar__link bp3-button bp3-minimal\\" to=\\"/contributors\\">
        <Blueprint3.Icon icon=\\"heart\\" />
      </NavLink>
      <div className=\\"visible-xs\\">
        <Blueprint3.NavbarDivider className=\\"thin-divider\\" />
      </div>
      <div className=\\"hidden-xs\\">
        <Blueprint3.NavbarDivider className=\\"default-divider\\" />
      </div>
      <Dropdown handleLogOut={[Function: handleLogOut]} updateLatestViewedCourse={[Function: updateLatestViewedCourse]} handleCreateCourse={[Function: handleCreateCourse]} courses={{...}} courseId={[undefined]} name=\\"Bob\\" />
    </Blueprint3.NavbarGroup>
  </Blueprint3.Navbar>
  <Switch>
    <Route path=\\"/playground\\" />
    <Route path=\\"/sourcecast\\" />
    <Route path=\\"/githubassessments\\" />
    <Route path=\\"/sicpjs/:section?\\">
      <SicpNavigationBar />
    </Route>
    <Route />
  </Switch>
</Fragment>"
`;
